kube_service_string.yaml
##################################################################################################
# redis service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-string-redis
  labels:
    app: service-string-redis
spec:
  ports:
  - port: 6379
    name: tcp
  selector:
    app: service-string-redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-string-redis-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-string-redis
        version: v1
    spec:
      containers:
      - name: service-string-redis
        image: redis
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
---
##################################################################################################
# string service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-string
  labels:
    app: service-string
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: service-string
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-string-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-string
        version: v1
    spec:
      containers:
      - name: service-string
        image: service_string_v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
