istio_destination_string_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-string
spec:
  host: service-string
  subsets:
  - name: v1
    labels:
      version: v1
---
