istio_virtualservice_math_v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-math
spec:
  hosts:
    - service-math
  http:
  - route:
    - destination:
        host: service-math
        subset: v2
